--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcc 'DA'
 - !lcsh 'National characteristics, French'
 - !lcc 'DC'
+- GITenberg
 title: English Pharisees French Crocodiles, and Other Anglo-French Typical Characters
 url: http://www.gutenberg.org/ebooks/34684
